Change test environment to be run in the browser, rather than with node

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
   "name": "nQueens",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+      "chai": "~1.8.0",
+      "mocha": "~1.14.0"
+  },
   "devDependencies": {}
 }
